# ros-kinematic_model

./: .gitignore  CMakeLists.txt  README.md  doxyfile  package.xml
examples/: simple_joint.cpp
include/kinematic_model/: kinematic_model.hpp  model_plugin.hpp
include/kinematic_model/geometry/: design.hpp  geometry.hpp  pose.hpp  transform.h  transform.hpp
include/kinematic_model/geometry/attachment/: attachment.hpp  attachments.hpp  dtdr.hpp  dtfr.hpp  dynamic.hpp  fixed.hpp  ftdr.hpp  ftfr.hpp
include/kinematic_model/geometry/graph/: connection.hpp  graph.hpp  path.hpp  vertex.hpp
include/kinematic_model/geometry/object/: frame.h  frame.hpp  joint.hpp  link.h  link.hpp  object.h  object.hpp  objects.hpp
include/kinematic_model/geometry/object/joint/: float.h  floating.h  floating.hpp  hinge.h  hinge.hpp  joint.h  joint.hpp  prismatic.h  prismatic.hpp
include/kinematic_model/model/: design.hpp
src/kinematic_model/: kinematic_model.cpp  main.cpp  model_plugin.cpp
src/kinematic_model/geometry/: design.cpp  geometry.cpp  pose.cpp  transform.cpp
src/kinematic_model/geometry/attachment/: attachment.cpp  dtdr.cpp  dtfr.cpp  dynamic.cpp  fixed.cpp  ftdr.cpp  ftfr.cpp
src/kinematic_model/geometry/graph/: connection.cpp  graph.cpp  vertex.cpp
src/kinematic_model/geometry/object/: frame.cpp  joint.cpp  link.cpp  object.cpp
src/kinematic_model/geometry/object/joint/: float.cpp  floating.cpp  hinge.cpp  joint.cpp  prismatic.cpp
src/kinematic_model/model/: design.cpp
