<?xml version="1.0"?>
<package format="2">

  <name>kinematic_model</name>
  <version>1.0.0</version>
  <description>A package for modeling the kinematics of a system and providing frame transforms.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>kalman_filter</depend>
  <depend>kinematic_model_msgs</depend>
  <doc_depend>doxygen</doc_depend>

</package>
